# TMS

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: example.cfg  odd_or_even.cfg
src/: app.rs  main.rs  tui.rs  turing_machine.rs
