[package]
name = "tms"
version = "0.1.1"
authors = ["Mirko Lana <lana.mirko@skiff.com>"]
edition = "2021"
description = "Alan Turing machine simulator"
readme = "README.md"
repository = "https://github.com/LanaMirko04/tms"
license-file = "LICENSE"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
crossterm = "0.27.0"
itertools = "0.12.0"
ratatui = "0.24.0"
